--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,10 +20,13 @@ License: What license is it under?
 Encoding: UTF-8
 LazyData: true
 Imports: 
+    ComplexHeatmap,
     data.table,
+    dendsort,
     ggplot2,
     magrittr,
     Matrix,
+    paletteer,
     readr,
     reticulate (>= 1.4.1)
 Depends: 
