--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,7 +1,8 @@
 exportPattern("^[[:alpha:]]+")
 
 import(ggplot2)
-importFrom(magrittr,"%>%")
+#importFrom(magrittr,"%>%")
 import(dplyr)
+import(magrittr)
 
 export("%>%")
