added documentation to cluster_tcrs function

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -30,7 +30,8 @@ Imports:
     paletteer,
     readr,
     reticulate (>= 1.4.1),
-    tictoc
+    tictoc,
+    uwot
 Depends: 
     R (>= 3.5)
 RoxygenNote: 7.3.2
