--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -31,6 +31,7 @@ Imports:
     Matrix (>= 1.7.3),
     readr,
     reticulate (>= 1.41.0.1),
+    stringdist,
     tictoc,
     uwot (>= 0.2.3)
 Depends: 
