--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -39,3 +39,9 @@ reference:
 - title: Single-cell TIRTLseq data
   contents:
   - has_concept("single-cell")
+
+articles:
+- title: Plot examples
+  navbar: ~
+  contents:
+  - plot_examples
