--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -30,9 +30,11 @@ Imports:
     dtplyr,
     duckdb,
     ggplot2,
+    glue,
     HDF5Array,
     igraph (>= 2.1.4),
     irlba (>= 2.3.5.1),
+    lifecycle,
     magrittr,
     Matrix (>= 1.7.3),
     Rcpp,
@@ -49,9 +51,10 @@ Imports:
 Depends: 
     R (>= 3.5)
 biocViews: 
-RoxygenNote: 7.3.2
+RoxygenNote: 7.3.3
 LinkingTo: 
     Rcpp,
     RcppParallel
 SystemRequirements: GNU make
 URL: https://nicholasclark.github.io/TIRTLtools/
+Roxygen: list(markdown = TRUE)
