--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,8 +1,13 @@
+^\.Rproj.user$
+^\.Rhistory$
+^\.RData$
+^\.Ruserdata$
+^__pycache__$
+^extra
+^docs
+^.*\.DS_Store$
 ^.*\.Rproj$
+^data-raw
+^inst/extdata
 ^\.Rproj\.user$
-^data-raw$
-^LICENSE\.md$
-^_pkgdown\.yml$
-^docs$
-^pkgdown$
-^\.github$
+^vignettes$
