--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,17 +1,20 @@
 exportPattern("^[[:alpha:]]+")
 
-import(tidyr)
+#import(tidyr)
 import(ggplot2)
 #importFrom(magrittr,"%>%")
 import(dplyr)
 import(magrittr)
-import(data.table)
+#import(data.table)
 import(dtplyr)
 import(HDF5Array)
 import(rhdf5)
-import(SummarizedExperiment)
-import(S4Vectors)
-import(Biostrings)
+#import(SummarizedExperiment)
+#import(S4Vectors)
+#import(Biostrings)
+importFrom(S4Vectors, DataFrame)
+importFrom(Biostrings, DNAStringSet, BStringSet, AAStringSet)
+importFrom(data.table, merge.data.table, setkey, getDTthreads, fread, is.data.table, as.data.table)
 
 export("%>%")
 importFrom(Rcpp, sourceCpp)
