move python scripts, change exports

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,4 +1,4 @@
-exportPattern("^[[:alpha:]]+")
+#exportPattern("^[[:alpha:]]+")
 
 #import(tidyr)
 import(ggplot2)
@@ -20,3 +20,81 @@ export("%>%")
 importFrom(Rcpp, sourceCpp)
 importFrom(RcppParallel, RcppParallelLibs)
 useDynLib(TIRTLtools, .registration = TRUE)
+
+
+#export(_TIRTLtools_tcrdist_cpp)
+#export(_TIRTLtools_tcrdist_parallel)
+export(add_metadata)
+export(add_single_chain_data)
+export(calculate_diversity)
+export(clean_pairs)
+export(clean_scTIRTLseq)
+export(cluster_tcrs)
+#export(convert_to_summarized_experiment)
+export(create_thimble_df)
+export(diversity)
+export(download_dataset)
+export(filter_dataset)
+export(filter_duplicate_tcrs)
+export(filter_mait)
+export(filter_nonfunctional_TCRs)
+export(filter_short_cdr3s)
+export(filter_v_alleles)
+export(filter_well_data)
+export(get_all_div_metrics)
+export(get_all_tcrs)
+#export(get_files_gh)
+#export(get_files_gh_SJTRC_minimal)
+export(get_pair_stats)
+export(get_paired_by_read_fraction_range)
+export(get_row_data)
+export(get_well_subset)
+export(get_wells_from_edges)
+export(identify_non_functional_seqs)
+export(identify_paired)
+#export(load_TIRTL_HDF5_10x)
+#export(load_TIRTL_HDF5_sparse)
+export(load_tirtlseq)
+export(load_well_data)
+#export(load_well_data_to_df_single)
+#export(load_well_data_to_sparse_multi)
+#export(load_well_data_to_sparse_single)
+#export(make_pseudo_replicates)
+export(params)
+export(plot_clone_size_across_samples)
+export(plot_clonotype_indices)
+export(plot_clusters)
+export(plot_diversity)
+export(plot_n_reads)
+export(plot_num_partners)
+export(plot_paired)
+export(plot_paired_by_read_fraction_range)
+export(plot_paired_vs_rank)
+export(plot_pairs_with_eachother)
+export(plot_ranks)
+export(plot_read_fraction_vs_pair_status)
+export(plot_sample_overlap)
+export(plot_sample_vs_sample)
+export(prep_for_tcrdist)
+#export(read_h5_df)
+#export(read_meta_HDF5)
+#export(read_meta_parquet)
+export(remove_duplicates)
+export(reorder_samples)
+#export(run_edgeR)
+#export(save_TIRTL_meta)
+#export(save_TIRTL_to_HDF5_10x)
+#export(save_TIRTL_to_HDF5_sparse)
+#export(show_row_data)
+#export(split_wells)
+export(submat)
+export(summarize_data)
+export(summarize_scTIRTLseq)
+export(TCRdist)
+#export(tcrdist_cpp)
+export(TCRdist_cpp)
+#export(tcrdist_parallel)
+export(TIRTL_process)
+#export(well_data_df_to_sparse)
+#export(well_data_df_to_sparse_multi)
+export(write_stitchr_tsv)
