pairing script working with mlx

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,7 +14,8 @@ import(rhdf5)
 #import(Biostrings)
 importFrom(S4Vectors, DataFrame)
 importFrom(Biostrings, DNAStringSet, BStringSet, AAStringSet)
-importFrom(data.table, merge.data.table, setkey, getDTthreads, fread, is.data.table, as.data.table)
+importFrom(data.table, merge.data.table, setkey, getDTthreads, fread, is.data.table, as.data.table, rbindlist, fwrite, tstrsplit)
+import(Matrix)
 
 export("%>%")
 importFrom(Rcpp, sourceCpp)
