--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,13 +7,13 @@ import(dplyr)
 import(magrittr)
 #import(data.table)
 import(dtplyr)
-import(HDF5Array)
-import(rhdf5)
+#import(HDF5Array)
+#import(rhdf5)
 #import(SummarizedExperiment)
 #import(S4Vectors)
 #import(Biostrings)
-importFrom(S4Vectors, DataFrame)
-importFrom(Biostrings, DNAStringSet, BStringSet, AAStringSet)
+#importFrom(S4Vectors, DataFrame)
+#importFrom(Biostrings, DNAStringSet, BStringSet, AAStringSet)
 importFrom(data.table, merge.data.table, setkey, getDTthreads, fread, is.data.table, as.data.table, rbindlist, fwrite, tstrsplit)
 
 import(reticulate)
@@ -51,7 +51,7 @@ export(get_all_tcrs)
 #export(get_files_gh_SJTRC_minimal)
 export(get_pair_stats)
 export(get_paired_by_read_fraction_range)
-export(get_row_data)
+#export(get_row_data)
 export(get_well_subset)
 export(get_wells_from_edges)
 export(identify_non_functional_seqs)
