--- a/NAMESPACE
+++ b/NAMESPACE
@@ -64,7 +64,7 @@ export(load_well_data)
 #export(load_well_data_to_sparse_multi)
 #export(load_well_data_to_sparse_single)
 #export(make_pseudo_replicates)
-export(params)
+#export(params)
 export(plot_clone_size_across_samples)
 export(plot_clonotype_indices)
 export(plot_clusters)
@@ -91,7 +91,7 @@ export(reorder_samples)
 #export(save_TIRTL_to_HDF5_sparse)
 #export(show_row_data)
 #export(split_wells)
-export(submat)
+#export(submat)
 export(summarize_data)
 export(summarize_scTIRTLseq)
 export(TCRdist)
