big speedup for clean_pairs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,7 +37,7 @@ export(cluster_tcrs)
 #export(convert_to_summarized_experiment)
 export(create_thimble_df)
 export(diversity)
-export(download_dataset)
+#export(download_dataset)
 export(filter_dataset)
 export(filter_duplicate_tcrs)
 export(filter_mait)
