fixing python deps for new basilisk version with pyenv

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -106,3 +106,4 @@ export(write_stitchr_tsv)
 export(run_pairing)
 #export(run_single_point_analysis_sub_pseudobulk_only)
 #export(run_single_point_analysis_sub_gpu)
+export(install_python_env)
