--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -19,33 +19,42 @@ authors:
 reference:
 - title: Bulk TIRTLseq data
 
-- subtitle: Data loading and wrangling
-  contents:
-  - has_concept("data_wrangling")
 - subtitle: TCR-alpha/TCR-beta pairing
   contents:
   - has_concept("pairing")
+- subtitle: Data loading
+  contents:
+  - has_concept("data_loading")
+- subtitle: Data wrangling
+  contents:
+  - has_concept("data_wrangling")
 - subtitle: Data processing and cleaning
   contents:
   - has_concept("data_processing")
-- subtitle: TCR repertoire analysis
+- subtitle: Quality control and data summary
   contents:
-  - has_concept("repertoire_analysis")
+  - has_concept("qc")
+- subtitle: TCR similarity and clustering
+  contents:
+  - has_concept("tcr_similarity")
+- subtitle: Longitudinal analysis
+  contents:
+  - has_concept("longitudinal")
 - subtitle: Diversity
   contents:
   - has_concept("diversity")
-- subtitle: Plotting
-  contents:
-  - has_concept("plotting")
 - subtitle: Export for external tools
   contents:
   - has_concept("stitchr")
 - subtitle: Well-level data functions
   contents:
   - has_concept("well")
-- subtitle: Download datasets
+# - subtitle: Download datasets
+#  contents:
+#  - has_concept("download")
+- subtitle: Python dependencies
   contents:
-  - has_concept("download")
+  - has_concept("python-deps")
 - subtitle: Data
   contents:
   - has_concept("data")
@@ -56,7 +65,7 @@ reference:
 
 - title: Other
   contents:
-  - lacks_concept(c("data", "data_processing", "data_wrangling", "diversity", "download", "pairing", "plotting", "repertoire_analysis", "single-cell", "stitchr", "well"))
+  - lacks_concept(c("data", "data_processing", "data_loading", "data_wrangling", "diversity", "download", "pairing", "longitudinal", "python-deps", "qc", "tcr_similarity", "single-cell", "stitchr", "well"))
 
 
 
