adding more docs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,15 +35,15 @@ export(reorder_samples) # docs 99% done, could use examples
 ## qc and data summary
 export(get_pair_stats) ## full docs
 export(plot_paired) ## full docs
-export(get_all_tcrs) ## docs 99% done, could use an example
-export(summarize_data)
+export(get_all_tcrs) ## full docs
+export(summarize_data) ## full docs
 export(get_paired_by_read_fraction_range) ## full docs
 export(plot_paired_by_read_fraction_range) ## full docs
-export(plot_paired_vs_rank)
-export(plot_pairs_with_eachother)
-export(plot_ranks)
+export(plot_paired_vs_rank) ## full docs
+export(plot_pairs_with_eachother) ## full docs
+export(plot_ranks) ## full docs
 export(rank_plot) ## deprecated for plot_ranks()
-export(plot_read_fraction_vs_pair_status)
+export(plot_read_fraction_vs_pair_status) ## full docs
 export(plot_sample_overlap)
 export(plot_n_reads)
 export(plot_num_partners)
